bitfields/tests/compile_error_cases/bitfield_bit_ops_disabled.stderr
error[E0599]: no method named `get_bit` found for struct `Bitfield` in the current scope
  --> tests/compile_error_cases/bitfield_bit_ops_disabled.rs:17:14
   |
 6 | #[bitfield(u32)]
   | ---------------- method `get_bit` not found for this struct
...
17 |     bitfield.get_bit(0);
   |              ^^^^^^^
   |
help: there is a method `set_bits` with a similar name
   |
17 -     bitfield.get_bit(0);
17 +     bitfield.set_bits(0);
   |
